clusters/talos-ottawa/apps/home/app/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  annotations:
    # tailscale.com/expose: "true"
    # tailscale.com/tailnet-fqdn: code-server.keiretsu.ts.net
    # tailscale.com/hostname: code-server
    # tailscale.com/proxy-group: common-egress
spec:
  selector:
    app: code-server  # Match labels with your Deployment
  ports:
    - name: http
      protocol: TCP
      port: 80  # Port exposed by the service
      targetPort: 8443  # Port on the pods (matches containerPort in Deployment)
  type: NodePort  # Expose service on a static port on each node
